--- a/Tabular_2_Image.ipynb
+++ b/Tabular_2_Image.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "c6d5fed9",
    "metadata": {
     "scrolled": false
@@ -393,7 +393,7 @@
        "[10 rows x 46 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ae5e7e5e",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e6cf7fce",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "4af033ca",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ec3c19b5",
    "metadata": {},
    "outputs": [],
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "2b50f2ec",
    "metadata": {},
    "outputs": [],
@@ -825,17 +825,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "a89ebc40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2771cc85c88>"
+       "<matplotlib.image.AxesImage at 0x24cdd83d2c8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "141d15a8",
    "metadata": {},
    "outputs": [],
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "b970a139",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
        "(2681, 7, 6)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "0b428ff9",
    "metadata": {},
    "outputs": [],
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "8bb53b4d",
    "metadata": {
     "scrolled": false
@@ -918,21 +918,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_6\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_16 (Conv2D)           (None, 7, 6, 32)          64        \n",
+      "conv2d_3 (Conv2D)            (None, 7, 6, 32)          64        \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 2, 2, 32)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 2, 2, 32)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_17 (Conv2D)           (None, 2, 2, 64)          2112      \n",
+      "conv2d_4 (Conv2D)            (None, 2, 2, 64)          2112      \n",
       "_________________________________________________________________\n",
-      "conv2d_18 (Conv2D)           (None, 2, 2, 128)         8320      \n",
+      "conv2d_5 (Conv2D)            (None, 2, 2, 128)         8320      \n",
       "_________________________________________________________________\n",
-      "global_average_pooling2d_4 ( (None, 128)               0         \n",
+      "global_average_pooling2d_1 ( (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 1)                 129       \n",
+      "dense_1 (Dense)              (None, 1)                 129       \n",
       "=================================================================\n",
       "Total params: 10,625\n",
       "Trainable params: 10,625\n",
@@ -940,13 +940,13 @@
       "_________________________________________________________________\n",
       "Train on 2010 samples, validate on 671 samples\n",
       "Epoch 1/200\n",
-      "2010/2010 - 2s - loss: nan - acc: 0.3507 - val_loss: nan - val_acc: 0.3458\n",
+      "2010/2010 - 1s - loss: nan - acc: 0.3438 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 2/200\n",
       "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 3/200\n",
-      "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
+      "2010/2010 - 0s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 4/200\n",
-      "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
+      "2010/2010 - 0s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 5/200\n",
       "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 6/200\n",
@@ -959,13 +959,7 @@
       "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
       "Epoch 10/200\n",
       "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
-      "Epoch 11/200\n",
-      "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
-      "Epoch 12/200\n",
-      "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
-      "Epoch 13/200\n",
-      "2010/2010 - 1s - loss: nan - acc: 0.3294 - val_loss: nan - val_acc: 0.3458\n",
-      "Epoch 14/200\n"
+      "Epoch 11/200\n"
      ]
     },
     {
@@ -975,7 +969,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-6efd35f36da4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;31m##Fit our created model over 10 epochs (Batch size of 6,000)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mmodel2_fit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-12-c3d181942974>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;31m##Fit our created model over 10 epochs (Batch size of 6,000)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mmodel2_fit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m24\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    778\u001b[0m           \u001b[0mvalidation_steps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalidation_steps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    779\u001b[0m           \u001b[0mvalidation_freq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalidation_freq\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 780\u001b[1;33m           steps_name='steps_per_epoch')\n\u001b[0m\u001b[0;32m    781\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    782\u001b[0m   def evaluate(self,\n",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_arrays.py\u001b[0m in \u001b[0;36mmodel_iteration\u001b[1;34m(model, inputs, targets, sample_weights, batch_size, epochs, verbose, callbacks, val_inputs, val_targets, val_sample_weights, shuffle, initial_epoch, steps_per_epoch, validation_steps, validation_freq, mode, validation_in_fit, prepared_feed_values_from_dataset, steps_name, **kwargs)\u001b[0m\n\u001b[0;32m    361\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    362\u001b[0m         \u001b[1;31m# Get outputs.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 363\u001b[1;33m         \u001b[0mbatch_outs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    364\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    365\u001b[0m           \u001b[0mbatch_outs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\backend.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, inputs)\u001b[0m\n\u001b[0;32m   3290\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3291\u001b[0m     fetched = self._callable_fn(*array_vals,\n\u001b[1;32m-> 3292\u001b[1;33m                                 run_metadata=self.run_metadata)\n\u001b[0m\u001b[0;32m   3293\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_call_fetch_callbacks\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfetched\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3294\u001b[0m     output_structure = nest.pack_sequence_as(\n",
@@ -1012,7 +1006,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "##Fit our created model over 10 epochs (Batch size of 6,000)\n",
-    "model2_fit = model2.fit(x_train, y_train, batch_size=10, epochs=200, validation_data=(x_val, y_val),verbose=2)"
+    "model2_fit = model2.fit(x_train, y_train, batch_size=24, epochs=200, validation_data=(x_val, y_val),verbose=2)"
    ]
   },
   {
